quote QUuid values

Task-number: QTBUG-44480
Change-Id: I125ab913c867758d958a2774ad125533d6a07a83
Reviewed-by: Evgeniy Fominov <fm@stilsoft.ru>
Reviewed-by: Mark Brand <mabrand@mabrand.nl>