src/sql/drivers/psql/qsql_psql.cpp
@@ -1320,6 +1320,9 @@ QString QPSQLDriver::formatValue(const QSqlField &field, bool trimStrings) const
             }
             break;
         }
+        case QVariant::Uuid:
+            r = QLatin1Char('\'') + field.value().toString() + QLatin1Char('\'');
+            break;
         default:
             r = QSqlDriver::formatValue(field, trimStrings);
             break;
